[package]
name = "image_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
image = "0.24.6"
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
